# ASQUI

./: .gitignore  CMakeLists.txt  build-inc.sh  build-win.bat  build.sh
App/: CMakeLists.txt
App/src/: main.cpp  main.mm
Engine/: CMakeLists.txt
Engine/src/: AsquiEngine.h  Core.cpp  Core.h  Engine.h
Engine/src/Components/: Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
Engine/src/Core/: Application.cpp  Application.h  Behavior.cpp  Behavior.h  Component.cpp  Component.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h  RenderingManager.cpp  RenderingManager.h  Scene.cpp  Scene.h  Time.cpp  Time.h
Engine/src/Platform/: NativeInput.cpp  NativeInput.h  NativeKeyboard.cpp  NativeKeyboard.h
